Test/style.css
@import url(https://fonts.googleapis.com/css2?family=Protest+Riot);

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    --image_border_color: #000;
    --image_border_px: 3px;
    --image_width: 140px;
    --image_height: 140px;
    --title_color: #fff;
    --description_color: #f1c40f;
    --svg_color: #fff;
    --menu_background_color: #0e0e0e;
    --menu_text_color: #fff;
    --menu_active_text_color: #f1c40f;
    --button_background_color: #0e0e0e;
    --button_text_color: #fff;
    --button_text_hover_color: #f1c40f;
    --textarea_background_color: #0e0e0e;
    --textarea_text_color: #fff;
    --textarea_link_text_color: #f1c40f;
    --footer_background_color: #0e0e0e;
    --footer_text_color: #fff;
    --footer_link_text_color: #f1c40f;
}

html{
    font-size: 155.5%;
}

body {
    font-family: "Protest Riot", sans-serif;
    font-weight: 400;
    line-height: 1.7;
    color: #000000;
    overflow: auto;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    background: #4e54c8;
    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
    width: 100%;
    height: 100vh;
    text-align: center
}

.flex_column_center {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.flex_row_center {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.flex_no_wrap_row_center {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: center;
    align-items: center;
}

.footer_div_item {
    color: var(--footer_text_color);
    background: rgba(0,0,0,0.6);
    padding: 1em;
    margin-top: 1em;
}

.footer_a_item {
    color: var(--footer_link_text_color);
    text-decoration: none;
    z-index: 2;
}

.footer_b_item {
    color: rgba(60,132,206);
    z-index:2;
}

.header_h_item {
    text-align: center;
    vertical-align: middle;
    font-size: 1.1em;
}

.header_h2_item {
    text-align: center;
    vertical-align: middle;
    font-size: 0.7em;
}

main {
    margin-bottom: auto;
}

.main_a_item {
    margin-top: 1em;
    text-decoration: none;
}

.main_text_item {
    display: flex;
    align-items: center;
    justify-content: center;
    color: var(--button_text_color);
    background-color: var(--button_background_color);
    width: 41em;
    margin-top: 1em;
    padding: 0.8em;
    border-radius: 0.3em;
    min-height: 3.7em;
    text-align: center;
    vertical-align: middle
}

.header_links_item {
    width: 1.6em;
    height: 1.6em;
    cursor: pointer;
    display: inline-block;
    transition: 0.10s ease;
    z-index: 299;
}

.header_links_item:hover {
    transform: scale(1.10);
}

.circles {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    z-index: -50;
}

    .circles li {
        position: absolute;
        display: block;
        list-style: none;
        width: 20px;
        height: 20px;
        background: rgba(255, 255, 255, 0.2);
        animation: animate 25s linear infinite;
        bottom: -150px;
        z-index: -50;
    }

        .circles li:nth-child(1) {
            left: 25%;
            width: 80px;
            height: 80px;
            animation-delay: 0s;
            z-index: -50;
        }


        .circles li:nth-child(2) {
            left: 10%;
            width: 20px;
            height: 20px;
            animation-delay: 2s;
            animation-duration: 12s;
            z-index: -50;
        }

        .circles li:nth-child(3) {
            left: 70%;
            width: 20px;
            height: 20px;
            animation-delay: 4s;
            z-index: -50;
        }

        .circles li:nth-child(4) {
            left: 40%;
            width: 60px;
            height: 60px;
            animation-delay: 0s;
            animation-duration: 18s;
            z-index: -50;
        }

        .circles li:nth-child(5) {
            left: 65%;
            width: 20px;
            height: 20px;
            animation-delay: 0s;
            z-index: -50;
        }

        .circles li:nth-child(6) {
            left: 75%;
            width: 110px;
            height: 110px;
            animation-delay: 3s;
            z-index: -50;
        }

        .circles li:nth-child(7) {
            left: 35%;
            width: 150px;
            height: 150px;
            animation-delay: 7s;
            z-index: -50;
        }

        .circles li:nth-child(8) {
            left: 50%;
            width: 25px;
            height: 25px;
            animation-delay: 15s;
            animation-duration: 45s;
            z-index: -50;
        }

        .circles li:nth-child(9) {
            left: 20%;
            width: 15px;
            height: 15px;
            animation-delay: 2s;
            animation-duration: 35s;
            z-index: -50;
        }

        .circles li:nth-child(10) {
            left: 85%;
            width: 150px;
            height: 150px;
            animation-delay: 0s;
            animation-duration: 11s;
            z-index: -50;
        }



@keyframes animate {

    0% {
        transform: translateY(0) rotate(0deg);
        opacity: 1;
        border-radius: 0;
    }

    100% {
        transform: translateY(-1000px) rotate(720deg);
        opacity: 0;
        border-radius: 50%;
    }
}

@media (max-width: 768px) {
    .main_text_item {
        width: 92vw;
    }

    .main_small_button_item {
        width: calc(92vw / 2 - 5px);
    }

    .main_button_item {
        width: 92vw;
    }

    .header_h_item {
        width: 92vw;
        text-align: center;
    }
    .header_h2_item {
        width: 92vw;
        text-align: center;
    }
    .footer_a_item {
        font-size: 100.5%
    }

    .footer_b_item {
        font-size: 100.5%
    }
}

